[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "kmbox_net-rust"
version = "1.0.1"
description = "Python bindings for KmBox Net"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/7owen/KmBoxNet"
Repository = "https://github.com/7owen/KmBoxNet"
"Bug Tracker" = "https://github.com/7owen/KmBoxNet/issues"

[tool.maturin]
features = ["extension-module"]
include = ["kmbox_net.pyi"]
